--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Hero Section -->
     <section id="home" class="relative h-screen flex items-center justify-center overflow-hidden">
         <div class="absolute inset-0 bg-black opacity-40"></div>
-        <img src="assets\img\hero.jpg" 
+        <img src="img\hero.jpg" 
              alt="Urban Cafè" class="absolute inset-0 w-full h-full object-cover">
         
         <div class="relative z-10 text-center px-4">
@@ -181,4 +181,5 @@
         </div>
     </div>
 </body>
+
 </html>
