--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<p class="text-4xl font-bold text-center mb-16">#URBANIZ<span class="text-[#fcd401]">ZATEVI</span></p>
             </div>
             <div class="md:w-1/2">
-                <img src="assets\img\about1.jpg" 
+                <img src="https://drive.google.com/file/d/16GrhAK8qedt4smxtac1WIKuE4ZwJZNF-/view?usp=drive_link" 
                      alt="Team Urban Cafè" class="w-full h-auto rounded-lg shadow-xl">
             </div>
         </div>
@@ -183,3 +183,4 @@
 </body>
 
 </html>
+
