--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<p class="text-4xl font-bold text-center mb-16">#URBANIZ<span class="text-[#fcd401]">ZATEVI</span></p>
             </div>
             <div class="md:w-1/2">
-                <img src="https://drive.google.com/file/d/16GrhAK8qedt4smxtac1WIKuE4ZwJZNF-/view?usp=drive_link" 
+                <img src="img\aboutjpg" 
                      alt="Team Urban Cafè" class="w-full h-auto rounded-lg shadow-xl">
             </div>
         </div>
@@ -95,27 +95,27 @@
         
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo7.jpg" 
+                <img src="img\photo7.jpg" 
                      alt="Caffè" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo6.jpg" 
+                <img src="img\photo6.jpg" 
                      alt="Interno" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo1.jpg" 
+                <img src="img\photo1.jpg" 
                      alt="Panini" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo2.jpg" 
+                <img src="img\photo2.jpg" 
                      alt="Bar" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo3.jpg" 
+                <img src="img\photo3.jpg" 
                      alt="Team" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="assets\img\photo4.jpg" 
+                <img src="img\photo4.jpg" 
                      alt="Evento" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
         </div>
@@ -183,4 +183,5 @@
 </body>
 
 </html>
+
 
