--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<p class="text-4xl font-bold text-center mb-16">#URBANIZ<span class="text-[#fcd401]">ZATEVI</span></p>
             </div>
             <div class="md:w-1/2">
-                <img src="img\aboutjpg" 
+                <img src="img\about1.jpg" 
                      alt="Team Urban Cafè" class="w-full h-auto rounded-lg shadow-xl">
             </div>
         </div>
@@ -183,5 +183,6 @@
 </body>
 
 </html>
+
 
 
