--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                      alt="Team" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="img\photo4.jpg" 
+                <img src="img\hero.jpg" 
                      alt="Evento" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
         </div>
@@ -183,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
