--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
                 <img src="img\photo1.jpg" 
-                     alt="Panini" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
+                     alt="Guitar" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
                 <img src="img\photo2.jpg" 
-                     alt="Bar" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
+                     alt="Divani" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
                 <img src="img\photo3.jpg" 
-                     alt="Team" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
+                     alt="Veranda" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
                 <img src="img\hero.jpg" 
-                     alt="Evento" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
+                     alt="Interno2" class="w-full h-64 object-cover hover:scale-105 transition duration-300">
             </div>
         </div>
     </section>
@@ -146,10 +146,9 @@
             <div class="md:w-1/2">
                 <h3 class="text-2xl font-bold mb-6">SEGUICI</h3>
                 <div class="flex space-x-4 mb-8">
-                    <a href="#" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/people/URBAN-CAF%C3%88/61564672832112/?_rdr" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/urban_cafe_tortoli/" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@urbancafe2.0/" class="text-3xl hover:text-[#fcd401] transition duration-300"><i class="fab fa-tiktok"></i></a>
                 </div>
                 
                 <h3 class="text-2xl font-bold mb-6">SCRIVICI</h3>
@@ -183,6 +182,7 @@
 </body>
 
 </html>
+
 
 
 
