--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header class="header fixed top-0 left-0 w-full z-50 py-4 px-6 flex justify-between items-center">
         <div class="logo text-2xl font-bold text-white">
-            <span class="text-[#fcd401]">URBAN</span> CAFÈ
+            <span class="text-[#fcd401]">URBAN</span><span class="text-[#e60f0b]"> CAFÈ</span>
         </div>
         <button id="theme-toggle" class="text-white focus:outline-none mr-4">
             <i class="fas fa-moon text-xl"></i>
@@ -125,7 +125,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 px-6 max-w-6xl mx-auto">
-        <h2 class="text-4xl font-bold text-center mb-16">CONTATT<span class="text-[#fcd401]">ACI</span></h2>
+        <h2 class="text-4xl font-bold text-center mb-16"><span class="text-[#fcd401]">CONTATTACI</span></h2>
         
         <div class="flex flex-col md:flex-row gap-12">
             <div class="md:w-1/2">
@@ -182,6 +182,7 @@
 </body>
 
 </html>
+
 
 
 
