--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="text-lg mb-6">Fondato nel 2010, Urban Cafè nasce dalla passione per il caffè di qualità e dall'amore per l'atmosfera urbana. Il nostro obiettivo è creare un luogo accogliente dove potersi rilassare, lavorare o incontrare amici.</p>
                 <p class="text-lg mb-6">Tutti i nostri prodotti sono selezionati con cura, dai chicchi di caffè alle materie prime per i nostri panini. Crediamo nella sostenibilità e nel supporto ai produttori locali.</p>
                 <p class="text-lg">Spirito urbano, caffè d'eccellenza. Da anni punto di riferimento per i coffe lovers di Tortolì</p>
-				<p class="text-4xl font-bold text-center mb-16">#URBANIZ<span class="text-[#fcd401]">ZATEVI</span></p>
+				<p class="text-4xl font-bold text-center mb-16"><span class="text-[#fcd401]">#URBANIZZATEVI</span></p>
             </div>
             <div class="md:w-1/2">
                 <img src="img\about1.jpg" 
@@ -180,8 +180,8 @@
         </div>
     </div>
 </body>
-
 </html>
+
 
 
 
