--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	<script defer src="assets/script.js"></script>
 </head>
 <body class="relative">
+	
+    <!-- Splash Screen -->
+    <div id="splash-screen" class="fixed inset-0 bg-black z-50 flex items-center justify-center">
+        <img src="splash.png" alt="Splash Screen" class="max-w-xs md:max-w-md animate-pulse-glow">
+    </div>
+
     <!-- Header -->
     <header class="header fixed top-0 left-0 w-full z-50 py-4 px-6 flex justify-between items-center">
         <div class="logo">
@@ -197,6 +203,7 @@
     </div>
 </body>
 </html>
+
 
 
 
