--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="relative">
 	
     <!-- Splash Screen -->
-    <div id="splash-screen" class="fixed inset-0 bg-black z-50 flex items-center justify-center">
+    <div id="splash-screen" class="fixed inset-0 bg-black z-[9999] flex items-center justify-center">
         <img src="splash.png" alt="Splash Screen" class="max-w-xs md:max-w-md animate-pulse-glow">
     </div>
 
@@ -203,6 +203,7 @@
     </div>
 </body>
 </html>
+
 
 
 
