--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                      onclick="openGalleryModal(this.src, this.alt)">
             </div>
             <div class="gallery-item rounded-lg overflow-hidden shadow-lg cursor-pointer">
-                <img src="img\hero.jpg" 
+                <img src="img\photo5.jpg" 
                      alt="Evento" class="w-full h-64 object-cover hover:scale-105 transition duration-300"
                      onclick="openGalleryModal(this.src, this.alt)">
             </div>
@@ -203,6 +203,7 @@
     </div>
 </body>
 </html>
+
 
 
 
