--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Slide 1 -->
                 <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-100">
                     <div class="parallax-img-container">
-                        <img src="img/slide1.jpg" 
+                        <img src="img/hero.jpg" 
                              alt="Urban Cafè">
                         <div class="absolute inset-0 bg-black opacity-40"></div>
                     </div>
@@ -74,7 +74,7 @@
                 <!-- Slide 3 -->
                 <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
                     <div class="parallax-img-container">
-                        <img src="img/slide3.jpg" 
+                        <img src="img/photo5.jpg" 
                              alt="Biliardino">
                         <div class="absolute inset-0 bg-black opacity-40"></div>
                     </div>
@@ -250,6 +250,7 @@
     </div>
 </body>
 </html>
+
 
 
 
