--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <!-- Slide 4 -->
                 <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
                     <div class="parallax-img-container">
-                        <img src="img/photo4.jpg" 
+                        <img src="img/slide4.jpg" 
                              alt="Giochi da tavolo">
                         <div class="absolute inset-0 bg-black opacity-40"></div>
                     </div>
@@ -250,6 +250,7 @@
     </div>
 </body>
 </html>
+
 
 
 
