--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <!-- Slide 5 -->
                 <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
                     <div class="parallax-img-container">
-                        <img src="img/hero.jpg" 
+                        <img src="img/slide5.jpg" 
                              alt="Freccette">
                         <div class="absolute inset-0 bg-black opacity-40"></div>
                     </div>
@@ -250,6 +250,7 @@
     </div>
 </body>
 </html>
+
 
 
 
