--- a/index.html
+++ b/index.html
@@ -52,50 +52,10 @@
 
     <!-- Hero Section -->
     <section id="home" class="relative h-screen overflow-hidden">
-        <!-- Carousel -->
-        <div class="absolute inset-0 overflow-hidden">
-            <div class="carousel h-full w-full relative">
-                <!-- Slide 1 -->
-                <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-100">
-                    <div class="parallax-img-container">
-                        <img src="img/slide3.jpg" 
-                             alt="Urban Cafè">
-                        <div class="absolute inset-0 bg-black opacity-40"></div>
-                    </div>
-                </div>
-                <!-- Slide 2 -->
-                <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
-                    <div class="parallax-img-container">
-                        <img src="img/slide1.jpg"
-                             alt="Biliardo">
-                        <div class="absolute inset-0 bg-black opacity-40"></div>
-                    </div>
-                </div>
-                <!-- Slide 3 -->
-                <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
-                    <div class="parallax-img-container">
-                        <img src="img/slide4.jpg" 
-                             alt="Biliardino">
-                        <div class="absolute inset-0 bg-black opacity-40"></div>
-                    </div>
-                </div>
-                <!-- Slide 4 -->
-                <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
-                    <div class="parallax-img-container">
-                        <img src="img/slide2.jpg" 
-                             alt="Giochi da tavolo">
-                        <div class="absolute inset-0 bg-black opacity-40"></div>
-                    </div>
-                </div>
-                <!-- Slide 5 -->
-                <div class="carousel-slide transition-opacity duration-1000 ease-in-out opacity-0">
-                    <div class="parallax-img-container">
-                        <img src="img/slide5.jpg" 
-                             alt="Freccette">
-                        <div class="absolute inset-0 bg-black opacity-40"></div>
-                    </div>
-                </div>
-            </div>
+	<!-- Carousel -->
+			<div class="absolute inset-0 overflow-hidden"><div class="carousel h-full w-full relative" id="carousel-container">
+				<!-- Slide will be loaded from script.js -->
+			</div>
         </div>
         
         <!-- Content -->
@@ -250,6 +210,7 @@
     </div>
 </body>
 </html>
+
 
 
 
