--- a/index.html
+++ b/index.html
@@ -172,10 +172,7 @@
                 
                 <h3 class="text-2xl font-bold mb-6">SCRIVICI</h3>
                 <form class="space-y-4">
-                    <input type="text" placeholder="Nome" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#fcd401]">
-                    <input type="email" placeholder="Email" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#fcd401]">
-                    <textarea placeholder="Messaggio" rows="4" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#fcd401]"></textarea>
-                    <button type="submit" class="btn-primary px-6 py-2 rounded-lg font-bold">Invia</button>
+				<a aria-label="Chat on WhatsApp" href="https://wa.me/3285913776"><img alt="Chat on WhatsApp" src="WhatsAppButtonWhiteSmall.png" /><a />
                 </form>
             </div>
         </div>
@@ -210,6 +207,7 @@
     </div>
 </body>
 </html>
+
 
 
 
