--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         
         <div class="flex flex-col md:flex-row gap-8 mb-16">
             <div class="md:w-1/2">
-                <p class="text-lg mb-6">Fondato nel 2010, Urban Cafè nasce dalla passione per il caffè di qualità e dall'amore per l'atmosfera urbana. Il nostro obiettivo è creare un luogo accogliente dove potersi rilassare, lavorare o incontrare amici.</p>
-                <p class="text-lg mb-6">Tutti i nostri prodotti sono selezionati con cura, dai chicchi di caffè alle materie prime per i nostri panini. Crediamo nella sostenibilità e nel supporto ai produttori locali.</p>
+                <p class="text-lg mb-6"></p>
+                <p class="text-lg mb-6"></p>
                 <p class="text-lg">Spirito Urbano, caffè d'eccellenza. Da anni punto di riferimento per i coffee lovers di Tortolì.</p>
        	        <h2 class="text-4xl font-bold text-center mb-16"><span class="text-[#fcd401]">#URBANIZZATEVI</span></h2>
             </div>
@@ -207,6 +207,7 @@
     </div>
 </body>
 </html>
+
 
 
 
