--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="flex flex-col h-full justify-center">
                 <a href="#home" class="text-white text-4xl font-bold mb-8 menu-item hover:text-[#fcd401] transition-all duration-300" data-section="home">Home</a>
                 <a href="#menu" class="text-white text-4xl font-bold mb-8 menu-item hover:text-[#fcd401] transition-all duration-300" data-section="menu">Menu</a>
+                <a href="#games" class="text-white text-4xl font-bold mb-8 menu-item hover:text-[#fcd401] transition-all duration-300" data-section="about">Giochi</a>
                 <a href="#about" class="text-white text-4xl font-bold mb-8 menu-item hover:text-[#fcd401] transition-all duration-300" data-section="about">Chi Siamo</a>
                 <a href="#contact" class="text-white text-4xl font-bold menu-item hover:text-[#fcd401] transition-all duration-300" data-section="contact">Contattaci</a>
             </div>
@@ -65,6 +66,7 @@
                 <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">BENVENUTI ALL'<span class="text-[#fcd401]">URBAN CAFÈ</span></h1>
                 <p class="text-xl text-white mb-8 max-w-2xl mx-auto">Un luogo urbano dove tradizione, modernità e divertimento si incontrano</p>
                 <a href="#menu" class="btn-primary inline-block px-8 py-3 rounded-full font-bold text-black">Scopri il nostro menu</a>
+                <a href="#games" class="btn-primary inline-block px-8 py-3 rounded-full font-bold text-black">Scopri i nostri giochi</a>
             </div>
         </div>
         
@@ -86,6 +88,152 @@
     </section>
 
     <div class="divider"></div>
+
+<!-- Game Section -->
+<section id="games" class="py-20 px-6 max-w-6xl mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-16">I NOSTRI <span class="text-[#fcd401]">GIOCHI</span></h2>
+
+    <p class="text-center text-lg mb-12 max-w-3xl mx-auto">
+        All'Urban Cafè puoi divertirti con tanti giochi da tavolo, perfetti per passare momenti spensierati in compagnia.
+    </p>
+
+    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
+
+        <!-- Monopoly -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\monopoly.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Monopoly</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center text-center font-semibold text-black text-[#1a1a1a]">Diventa il magnate degli immobili e sbaraglia i tuoi avversari!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Trivial Pursuit -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\trivial.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Trivial Pursuit</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Metti alla prova la tua cultura generale e rispondi a tutte le domande!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jenga -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\jenga.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Jenga</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Sfida la gravità e i tuoi amici senza far crollare la torre!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Risiko -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\risiko.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Risiko</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Conquista il mondo con la tua strategia militare!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Shangai -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\shangai.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Shangai</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Estrai le bacchette senza far muovere le altre!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Uno -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\uno.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Uno</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Scarta tutte le carte e urla UNO per vincere!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Scarabeo -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\scarabeo.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Scarabeo</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Forma parole e ottieni il punteggio più alto!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Taboo -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\taboo.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Taboo</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Descrivi la parola senza usare le parole proibite!</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Coco Rido -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\cocorido.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Coco Rido</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Gioco di carte irriverente e divertente per gruppi di amici.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Quick Stop -->
+        <div class="flip-card cursor-pointer reveal-up">
+            <div class="flip-card-inner h-64 ">
+                <div class="flip-card-front bg-white dark:bg-[#2d2d2d] shadow-md border-2 border-gray-300 dark:border-gray-500 flex flex-col">
+                    <img src="assets\thumb\quickstop.webp" class="w-full h-48 object-cover">
+                    <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Quick Stop</h3>
+                </div>
+                <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
+                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Sfida lampo dove la velocità è tutto!</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<div class="divider"></div>
+
 
     <!-- About Section -->
     <section id="about" class="py-20 px-6 max-w-6xl mx-auto">
@@ -207,6 +355,7 @@
     </div>
 </body>
 </html>
+
 
 
 
