--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">BENVENUTI ALL'<span class="text-[#fcd401]">URBAN CAFÈ</span></h1>
                 <p class="text-xl text-white mb-8 max-w-2xl mx-auto">Un luogo urbano dove tradizione, modernità e divertimento si incontrano</p>
                 <a href="#menu" class="btn-primary inline-block px-8 py-3 rounded-full font-bold text-black">Scopri il nostro menu</a>
+                <p class="text-xl text-white mb-8 "></p>
                 <a href="#games" class="btn-primary mt-10 inline-block px-8 py-3 rounded-full font-bold text-black">Scopri i nostri giochi</a>
             </div>
         </div>
@@ -355,6 +356,7 @@
     </div>
 </body>
 </html>
+
 
 
 
