--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <img src="logo.png" alt="Urban Cafè Logo" class="mx-auto mb-8 w-64 md:w-80">
                 <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">BENVENUTI ALL'<span class="text-[#fcd401]">URBAN CAFÈ</span></h1>
                 <p class="text-xl text-white mb-8 max-w-2xl mx-auto">Un luogo urbano dove tradizione, modernità e divertimento si incontrano</p>
-                <a href="#menu" class="btn-primary mb-8 inline-block px-8 py-3 rounded-full font-bold text-black">Scopri il nostro menu</a>
-                <a href="#games" class="btn-primary left: -10px inline-block px-8 py-3 rounded-full font-bold text-black">Scopri i nostri giochi</a>
+                <a href="#menu" class="btn-primary mb-5 inline-block px-8 py-3 rounded-full font-bold text-black">Scopri il nostro menu</a>
+                <a href="#games" class="btn-primary  inline-block px-8 py-3 rounded-full font-bold text-black">Scopri i nostri giochi</a>
             </div>
         </div>
         
@@ -355,6 +355,7 @@
     </div>
 </body>
 </html>
+
 
 
 
